--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- RESOURCES CSS -->
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/responsive.css">
-    <title>Hello, world!</title>
+    <title>COVID-19</title>
   </head>
   <body>
     <!-- START HEADER AREA -->
